Added functionality for the system to reset a password if a user forgets. This involves the users DOB. Had to update form and models to make this work.

--- a/application/templates/user/signin.html
+++ b/application/templates/user/signin.html
@@ -18,6 +18,14 @@
             <button class="btn btn-lg btn-success mt-3">Submit</button>
         </form>
     </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-9"></div>
+            <div class="col-2">
+                <a href="/users/forgot" class="btn btn-dark">Forgot Password</a>
+            </div>
+        </div>
+    </div>
 {% endblock %}
 {% block scripts %}
 
