Updating the readme.md file for capstone project.

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %}Your Reading Companion{% endblock %}
 {% block content %}
     <div class="top">
-        <h3>Top Books</h3>
+        <h3>Your Reading Companion Library</h3>
         <div class='container' id='top_books'>
             {% if books %}
                 {% for book in books %}
